--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,13 @@
+== Phurl Version 2.4.1 ==
+ * Made post-shortening text (html/index_done.php) more simple and easier to read.
+ * Fixed Cross Site Scripting Vulnerabilities (88,89,90)
+ * Corrected a grammatical mistake in on of the error messages.
+ * Fixed directory browsing for /assets and /html (86)
+ * Added headings to the table of URLs in the admin panel
+ * Fixed issues with mailto protocol (71)
+ * Fixed Full path disclosure issues (85)
+ * 
+
 == Phurl Version 2 BETA 4 ==
  
 * Added new Phurl version notification in admin panel
